--- a/Project Executable Files/main.ipynb
+++ b/Project Executable Files/main.ipynb
@@ -704,7 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Xception.save(\"trained.keras\")"
+    "Xception.save(\"trained.h5\")"
    ]
   },
   {
